added container and form

--- a/index.html
+++ b/index.html
@@ -14,7 +14,30 @@
     />
   </head>
   <body>
-    <div class="container"></div>
+    <form>
+      <input type="search" placeholder="Enter a city..." />
+      <input type="submit" value="Search" class="btn btn-primary" />
+    </form>
+    <div class="conatiner">
+      <div class="row">
+        <div class="col-6">
+          <ul>
+            <li>21° F|C</li>
+            <li>Wind speed</li>
+          </ul>
+        </div>
+        <div class="col-6">
+          <ul>
+            <li>City</li>
+            <li>Monday 12:56</li>
+          </ul>
+        </div>
+      </div>
+    </div>
     <script src="src/index.js"></script>
+    <a href="https://github.com/alwaugh18/vanilla-weather-app">
+      Open source code by
+    </a>
+    Abigail
   </body>
 </html>
